# ChangeLog for dev-python/wordish
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*wordish-0.0.6 (11 Feb 2010)

  11 Feb 2010; James Rowe <jnrowe@gmail.com> +wordish-0.0.6.ebuild,
  +metadata.xml:
  Initial ebuild, by me.
