@@ -2,13 +2,15 @@
 Hash: SHA1
 
 DIST wordish-0.0.6.tar.gz 7507 RMD160 0b85d827e06e34c6a32645de16cd93a95bb1ee49 SHA1 81ae3889b8bae2b0f74212011c83dfea1ffbc240 SHA256 25965bae8cf0da1eb42de061d1b8d8e2e2403848ecfac93dfa833f86c24cb92c
+DIST wordish-1.0.0beta4.tar.gz 10111 RMD160 ade5293803da41d99bbd04c8327a334b577fa8b1 SHA1 0da51450d2a5071b7dbdd0b85d92097634969655 SHA256 bf0cd85fab1fd0a02901eac48335997408ddb4d3d34db993c47267256eafb0c1
 EBUILD wordish-0.0.6.ebuild 358 RMD160 e312f9a5691403a9e08c666dac159927b9490521 SHA1 89dd217edaf9f0e32abe2462e7522fb093a9c95b SHA256 84c4ee655f1afe99219372a29238ef616853132ae9b12abb2d58ce39a03ef3ed
-MISC ChangeLog 260 RMD160 1db466c028656051dddf028dee70437e1ad09fed SHA1 bbf499928203b2343961db739f2019c269a85e37 SHA256 f07a9e6632c326b25fd070dea1408b77c1a1b76ebc33d59dd64a7fe527c0f002
-MISC metadata.xml 984 RMD160 c17f6312c9e77ea09e20176d1bc88b281087cce1 SHA1 afff213f3c148b41975a57e3924b07f73d8720f4 SHA256 a2754b1a487dac6dfd9cc85800348c7865d9e25898ec499e4de619e5d4e7b71a
+EBUILD wordish-1.0.0_beta4.ebuild 614 RMD160 1158cdc2259e5562277df5b2bdeb80170cfe742f SHA1 9aba01031307e52e29039bb43aa50ecec172e271 SHA256 3816ef6c9652a69e35419e13c100b6a083f8edac637654a106c0fbb6eed1644c
+MISC ChangeLog 485 RMD160 08352b208333dd2da79c6f97a79e2de8ef05d833 SHA1 63676f6e9e86f3620b333230593a459f366a8eaf SHA256 0049e930a32abba3b9f418680bd0ded6eed6f1974fde5b237cf9149d8c99c210
+MISC metadata.xml 981 RMD160 05ce40063367c6d32123b3eccfcc56af17516f98 SHA1 9984be5d02b178d9010ea3232001b43cb7754b65 SHA256 294d778c85ff25addf6e793c667f5356a9a3787831910dce674b4ae3fd83f5d8
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.14 (GNU/Linux)
 
-iEYEARECAAYFAktzTFMACgkQzJrj3cAXR0kUogCfYuryijhHC92q6i1YqgCTxavM
-nGcAni3Y8+/y2eSn2aNTK7jy5IP9y+P5
-=53IM
+iEYEARECAAYFAkt6VhsACgkQzJrj3cAXR0kCQQCgseOg6+tF1RPuompgldSJwq4L
+FDIAnj3wJMqS/PynLKUHUFxTXPNgZMnz
+=3bRu
 -----END PGP SIGNATURE-----
