@@ -1,0 +1,22 @@
+>=app-admin/eselect-python-20091230 virtual/python
+>=app-admin/eselect-python-20091230 virtual/python
+0
+http://pypi.python.org/packages/source/w/wordish/wordish-1.0.0beta4.tar.gz
+
+http://pypi.python.org/pypi/wordish/
+GPL-3
+Parses a shell session, test the commands compare the output
+~amd64 ~x86
+distutils multilib python toolchain-funcs versionator
+
+
+
+
+2
+
+compile install postinst postrm prepare unpack
+
+
+
+
+
