@@ -1,5 +1,9 @@
 # extra line needed because portage is buggy
 
+# James Rowe <jnrowe@gmail.com> (16 Feb 2010)
+# Beta release of wordish
+=dev-python/wordish-1.0.0_beta4
+
 # James Rowe <jnrowe@gmail.com> (13 Feb 2010)
 # live ebuild for pitz
 =dev-util/pitz-9999
